@@ -6,6 +6,8 @@ git-annex (6.20160908) UNRELEASED; urgency=medium
     over ssh etc.
   * Make --json and --quiet work when used with -J.
     Previously, -J override the other options.
+  * addurl, get: Added --json-progress option, which adds progress
+    objects to the json output.
   * Remove key:null from git-annex add --json output.
 
  -- Joey Hess <id@joeyh.name>  Thu, 08 Sep 2016 12:48:55 -0400
